--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="fr">
-  <head>
-      <meta charset="UTF-8">
-      <title>Accueil</title>
-  </head>
-  <body>
-
-  </body>
+<head>
+    <meta charset="UTF-8">
+    <title>SAE 1.06</title>
+</head>
+<body>
+    <h2>Bienvenue sur notre site de presentation de l'entreprise Synchronic</h2>
+</body>
 </html>
