--- a/index.html
+++ b/index.html
@@ -6,5 +6,7 @@
 </head>
 <body>
     <h2>Bienvenue sur notre site de presentation de l'entreprise Synchronic</h2>
+    <p>Nous avons décidé d'analyser une entreprise de sécurité informatique qui  se nomme Synchronic. Leur spécialité est la création d'une structure informatique virtuelle et physique pour des objets permettant de sécuriser un bâtiment, structures ou autres. 
+        Leur siège social se trouve à Rouen. </p>
 </body>
 </html>
