--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
             <div class="navbar-expand" id="navbarNav">
               <ul class="navbar-nav">
                 <li class="nav-item">
-                  <a class="nav-link active text-white" aria-current="page" href="page_accueil.html">Accueil</a>
+                  <a class="nav-link active text-white" aria-current="page" href="index.html">Accueil</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link active" aria-current="page" style="color: rgb(99, 226, 99);" href="about.html">A propos de l'entreprise</a>
