--- a/page_produit.html
+++ b/page_produit.html
@@ -17,7 +17,7 @@
         <div class="navbar-expand" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link text-white " aria-current="page" href="page_accueil.html">Accueil</a>
+              <a class="nav-link text-white " aria-current="page" href="index.html">Accueil</a>
             </li>
             <li class="nav-item">
               <a class="nav-link text-white" href="about.html">A propos de l'entreprise</a>
